CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
PROJECT(BOXOR)

# INCLUDE(FindPkgConfig)

# necessary???
# PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
# PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
# PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.14)

ADD_SUBDIRECTORY(Box2D)
ADD_SUBDIRECTORY(frameworks)
ADD_SUBDIRECTORY(source)
