FILE(GLOB_RECURSE SOURCEFILES "*.cpp")
# LIST(REMOVE_ITEM SOURCEFILES "p1_old.cpp")
ADD_EXECUTABLE(BOXOR ${SOURCEFILES})

SET(SDL2_LIBRARIES /Library/Frameworks/SDL2.framework)
SET(SDL2IMAGE_LIBRARIES /Library/Frameworks/SDL2_image.framework)
SET(SDL2TTF_LIBRARIES /Library/Frameworks/SDL2_ttf.framework)

SET(RESOURCE_FILES
  UbuntuMono.ttf
  )
INSTALL(FILES ${RESOURCE_FILES} DESTINATION ${BOXOR_BINARY_DIR}/source)

INCLUDE_DIRECTORIES(/usr/local/include ../)
TARGET_LINK_LIBRARIES(BOXOR Box2D ${SDL2_LIBRARIES} ${SDL2IMAGE_LIBRARIES} ${SDL2TTF_LIBRARIES})

SET(CMAKE_CXX_FLAGS "-g -Wall -std=c++11")
# SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
